# FinMind

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api/: main.py
config/agents/: earnings_agent.yaml  risk_agent.yaml  sentiment_agent.yaml  strategy_agent.yaml  technical_agent.yaml  valuation_agent.yaml
config/chains/: earnings_deep_dive.yaml  full_analysis.yaml  quick_scan.yaml
config/methodologies/: comparables.yaml  dcf.yaml
config/prompts/: valuation_prompts.yaml
scripts/: init-db.sql  start-dev.sh
src/: __init__.py  main.py
src/agents/: __init__.py  earnings_agent.py  macro_agent.py  sector_agent.py  sentiment_risk_agent.py  strategy_agent.py  technical_agent.py  valuation_agent.py
src/api/: __init__.py  analysis_routes.py  broker_routes.py  main.py  models.py  task_store.py
src/brokers/: __init__.py  base.py  futu.py  ibkr.py  ibkr_cpapi.py  ibkr_flex.py  portfolio.py  tiger.py  trade_store.py
src/core/: __init__.py  backtest.py  base.py  cache.py  config_loader.py  data_and_chain.py  database.py  market_hours.py  monte_carlo.py  portfolio_analysis.py  portfolio_tracker.py  quote_service.py  report_generator.py  utils.py  yfinance_utils.py
src/llm/: __init__.py  gateway.py  providers.py
tests/: __init__.py  conftest.py  test_agents.py  test_report_generator.py
web/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.tsx  i18n.ts
web/src/components/Analysis/: BacktestPanel.tsx  RiskAnalysis.tsx  SensitivityAnalysis.tsx  TechnicalOverview.tsx  TimeframeAnalysis.tsx  index.ts
web/src/components/Charts/: PriceChart.tsx
web/src/components/Common/: LanguageSwitcher.tsx
web/src/components/Layout/: AppLayout.tsx
web/src/components/Stock/: StockHeader.tsx
web/src/hooks/: useStreamingAnalysis.ts  useThemeColors.ts
web/src/locales/: en.json  zh.json
web/src/pages/: AnalysisPage.tsx  Dashboard.tsx  PortfolioPage.tsx  SettingsPage.tsx  WatchlistPage.tsx
web/src/services/: api.ts  brokerApi.ts  sse.ts
web/src/stores/: analysisStore.test.ts  analysisStore.ts  settingsStore.test.ts  settingsStore.ts
web/src/styles/: global.css  theme.ts
web/src/test/: setup.ts
web/src/types/: analysis.ts  broker.ts
